# bilbycast-manager

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  start-dev.sh  tailwind.config.js
config/: default.toml
crates/manager-core/: Cargo.toml
crates/manager-core/src/: crypto.rs  export.rs  lib.rs  validation.rs
crates/manager-core/src/ai/: anthropic.rs  config_gen.rs  gemini.rs  mod.rs  openai.rs
crates/manager-core/src/auth/: csrf.rs  jwt.rs  mod.rs  password.rs  rbac.rs
crates/manager-core/src/db/: audit.rs  events.rs  mod.rs  nodes.rs  sessions.rs  settings.rs  topology_positions.rs  tunnels.rs  ui_preferences.rs  users.rs
crates/manager-core/src/drivers/: edge.rs  mod.rs  relay.rs
crates/manager-core/src/models/: event.rs  flow.rs  mod.rs  node.rs  settings.rs  tunnel.rs  user.rs  ws_protocol.rs
crates/manager-core/src/node_client/: mod.rs  types.rs
crates/manager-server/: Cargo.toml
crates/manager-server/src/: app_state.rs  main.rs
crates/manager-server/src/api/: ai.rs  auth.rs  events.rs  export.rs  mod.rs  nodes.rs  preferences.rs  settings.rs  topology.rs  tunnels.rs  users.rs
crates/manager-server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/manager-server/src/ui/: ai_assistant.html  ai_settings.html  dashboard.html  events.html  login.html  managed_nodes.html  mod.rs  node_config.html  node_detail.html  settings.html  topology.html  users.html
crates/manager-server/src/ws/: browser.rs  mod.rs  node_hub.rs
crates/manager-ui/: Cargo.toml
crates/manager-ui/src/: app.rs  lib.rs
crates/manager-ui/src/components/: flow_card.rs  mod.rs  node_card.rs
crates/manager-ui/src/components/common/: mod.rs
crates/manager-ui/src/layouts/: auth_layout.rs  main_layout.rs  mod.rs
crates/manager-ui/src/pages/: ai_assistant.rs  ai_settings.rs  dashboard.rs  events.rs  login.rs  mod.rs  node_config.rs  node_detail.rs  settings.rs  topology.rs  users.rs
docs/: API.md  SECURITY.md  architecture-module-extension.mmd  architecture-security.mmd  architecture.mmd  ip-tunneling.md
migrations/: 001_initial_schema.sql  002_tunnels.sql  003_device_type.sql  004_revoked_sessions.sql  005_node_expiry.sql  006_tunnel_relay_node.sql  007_tunnel_encryption.sql  008_topology_positions.sql  009_ui_preferences.sql  010_tunnel_peer_addr.sql  011_tunnel_bind_secret.sql  012_tunnel_push_status.sql
