[workspace]
resolver = "2"
members = [
    "crates/manager-core",
    "crates/manager-server",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Core
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "migrate", "sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# Auth & crypto
argon2 = "0.6.0-rc.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
aes-gcm = "0.11.0-rc.3"
sha2 = "0.11.0-rc.5"
rand = "0.10.0"

# HTTP client (for AI providers)
reqwest = { version = "0.13.2", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "set-header"] }
tower = "0.5.3"

# Utilities
dashmap = "7.0.0-rc2"
thiserror = "2.0.18"
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"

# Config
toml = "1.0.7"
clap = { version = "4.6.0", features = ["derive"] }

# Internal crates
manager-core = { path = "crates/manager-core" }
manager-server = { path = "crates/manager-server" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
