[package]
name = "manager-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bilbycast-manager"
path = "src/main.rs"

[dependencies]
manager-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }

[dependencies.axum-server]
version = "0.8.0"
features = ["tls-rustls"]

[dependencies.rustls]
version = "0.23.37"

[dependencies.rustls-pemfile]
version = "2.2.0"
