[package]
name = "manager-ui"
version.workspace = true
edition.workspace = true

[dependencies]
manager-core = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
